2006-04-13  Luc Pionchon  <luc.pionchon@nokia.com>

	Pops up the color selector on 'selecte' hardkey (IMP-15)
	
	* hildon-widgets/hildon-color-button.c
	(hildon_color_button_init): connect "key-release-event"
	(hildon_color_button_key_released): new function.
	Pops up the color selector on 'select' hardkey release


2006-04-13  Luc Pionchon  <luc.pionchon@nokia.com>

	Hildon grid, set items to be focus-and-activate instead of single
	tap activation (IMP-14)	
	
	* hildon-widgets/hildon-grid.c (hildon_grid_button_pressed): do not set focus.
	* hildon-widgets/hildon-grid.c (hildon_grid_button_released): activate selected item.


2006-04-13  Luc Pionchon  <luc.pionchon@nokia.com>

	Fetch hours/minutes/seconds separators from current locale (IMP-8)

	* hildon-widgets/hildon-time-editor.c
	(struct _HildonTimeEditorPrivate): added 'hm_sep_symbol' and 'ms_sep_symbol'
	(hildon_time_editor_init): do not get separator labels from i18n, but from locale
	(hildon_time_editor_finalize): free separator symbols
	(get_time_separators): new function. Get time separators from locale.
	(hildon_time_editor_check_locale): call get_time_separators.

2006-04-13  Luc Pionchon  <luc.pionchon@nokia.com>

	Removed icon for mandatory fields (IMP-3).
	Note: the logic and API to specify mandatory fields is preserved.

	* hildon-widgets/hildon-caption.c (HILDON_CAPTION_MANDATORY_ICON): removed.
	(struct _HildonCaptionPrivate): removed 'mandatory_icon' field.
	(hildon_caption_set_property): case PROP_STATUS, removed related code.
	(hildon_caption_set_label_alignment): removed related code.


2006-04-07  Luc Pionchon  <luc.pionchon@nokia.com>

	* configure.ac: 0.12.8

2006-04-07  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-banner.c: added gtk-doc Since markers.


2006-04-07  Tomas Junnonen  <tomas.junnonen@nokia.com>

 	- Added support for Pango markup
	  Added   hildon_banner_show_information_with_markup
 	- Removed hildon_banner_show_confirmation